# label-anything

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  run
src/label_anything/: cli.py  files.py  masks.py
src/label_anything/model/: __init__.py  sam2.py
src/label_anything/ui/: __init__.py  canvas.py  image_labeler.py
tests/: test_files.py  test_masks.py
